--- a/lab.PDFExcelCSVExportApp/lab.PDFExcelCSVExportApp/lab.PDFExcelCSVExportApp.csproj
+++ b/lab.PDFExcelCSVExportApp/lab.PDFExcelCSVExportApp/lab.PDFExcelCSVExportApp.csproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="27.0.3" />
+    <PackageReference Include="DataTables.AspNet.AspNetCore" Version="2.0.2" />
+    <PackageReference Include="DataTables.AspNet.Core" Version="2.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.5" />
   </ItemGroup>
 
