--- a/lab.PDFExcelCSVExportApp/lab.PDFExcelCSVExportApp/lab.PDFExcelCSVExportApp.csproj
+++ b/lab.PDFExcelCSVExportApp/lab.PDFExcelCSVExportApp/lab.PDFExcelCSVExportApp.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="CsvHelper" Version="27.0.3" />
     <PackageReference Include="DataTables.AspNet.AspNetCore" Version="2.0.2" />
     <PackageReference Include="DataTables.AspNet.Core" Version="2.0.2" />
+    <PackageReference Include="DNTCaptcha.Core" Version="3.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.5" />
   </ItemGroup>
 
